--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,25 +3,17 @@ requires = [ "poetry-core",]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "demo-flows"
+name = "scallable-command-generator-demo"
 version = "2.0.0"
-description = "A starter point for exploring CALM."
-authors = [ "Tom Bocklisch <tmbo@rasa.com>",]
+description = "A starter point for exploring scalable command generator in CALM."
+authors = [ "Ognjen Francuski <o.francuski@rasa.com>",]
 readme = "README.md"
-
-[[tool.poetry.source]]
-name = "rasa-plus"
-url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-plus-py/simple/"
-default = false
-secondary = true
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.11"
-rasa = [
-     {version = "3.7.8", allow-prereleases = true}
-]
-rasa-plus = [
-     {version = "3.7.8", allow-prereleases = true}
+rasa-pro = [
+#     {version = "3.8.0rc2", allow-prereleases = true}
+    {path = "../rasa", develop=true, python = "<3.9"},
 ]
 
 [tool.poetry.group.dev.dependencies]
